@@ -126,7 +126,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: macos-11
+          - os: macos-12
           - os: macos-14
           - os: windows-2019
           - os: ubuntu-20.04
